# hexi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: demo.md  index.md
docs/appendix/: faq.md  glossary.md  provenance.md  troubleshooting-matrix.md
docs/concepts/: action-plans.md  events.md  mental-model.md  providers.md  safety.md
docs/contracts/: action_plan.schema.json  event.schema.json
docs/examples/: embedded-step.md  index.md  policy-loop.md  templates-walkthrough.md  todo-refiner.md
docs/guides/: configuration.md  getting-started.md
docs/how-to/: add-model-adapter.md  configure-providers.md  contribute.md  troubleshoot-runs.md  write-policies.md
docs/internals/: run-step-service.md  storage-layering.md  testing-strategy.md  v001-decisions.md
docs/notes/: opencode_reference.md
docs/preface/: vision.md
docs/reference/: actionplan-schema.md  architecture.md  cli.md  configuration.md  event-schema.md  python-api.md  templates.md
docs/tutorials/: embedded-usage.md  first-run.md  quickstart.md  team-bootstrap.md
docs_theme/hexi_docs/: main.html
docs_theme/hexi_docs/assets/css/: theme.css
docs_theme/hexi_docs/assets/js/: theme.js
examples/embedded_step/: README.md  pyproject.toml  run_embedded.py
examples/policy_loop/: README.md  pyproject.toml  run_loop.py
examples/todo_refiner/: README.md  pyproject.toml  run.py
src/hexi/: cli.py
src/hexi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hexi/adapters/: __init__.py  event_log_jsonl.py  events_console.py  exec_local.py  memory_file.py  model_anthropic_compat.py  model_http_common.py  model_openai_compat.py  model_openrouter_http.py  model_openrouter_sdk.py  workspace_local_git.py
src/hexi/core/: __init__.py  domain.py  policy.py  ports.py  schemas.py  service.py
templates/: README.md
templates/hexi-agent-worker/: README.md  pyproject.toml
templates/hexi-agent-worker/.hexi/: config.toml
templates/hexi-agent-worker/worker/: main.py
templates/hexi-data-job/: .gitignore  Makefile  README.md  pyproject.toml
templates/hexi-data-job/.hexi/: config.toml
templates/hexi-data-job/src/datajob/: main.py
templates/hexi-data-job/tests/: test_job.py
templates/hexi-fastapi-service/: Makefile  README.md  pyproject.toml
templates/hexi-fastapi-service/app/: main.py
templates/hexi-python-lib/: README.md  pyproject.toml
templates/hexi-python-lib/src/samplelib/: __init__.py
templates/hexi-python-lib/tests/: test_samplelib.py
templates/hexi-typer-cli/: .gitignore  README.md  pyproject.toml
templates/hexi-typer-cli/.hexi/: config.toml
templates/hexi-typer-cli/src/samplecli/: main.py
templates/hexi-typer-cli/tests/: test_cli.py
tests/: test_actionplan_parser.py  test_cli.py  test_event_log_jsonl.py  test_exec_local.py  test_memory_file.py  test_models.py  test_openrouter_models.py  test_policy.py  test_service.py  test_workspace.py  test_workspace_local_git.py
