[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexi"
version = "0.1.0"
description = "Minimal contract-driven coding-agent runtime + CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antonio Ognio" }]
maintainers = [{ name = "Antonio Ognio" }]
keywords = [
  "ai",
  "agent",
  "coding-agent",
  "cli",
  "developer-tools",
  "hexagonal-architecture",
  "openrouter",
  "typer"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "typer>=0.12,<1",
  "httpx>=0.27,<1",
  "rich>=13.7,<15",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
openrouter-http = ["requests>=2.31,<3"]
openrouter-sdk = ["openrouter>=0.6.0,<1"]
openrouter = [
  "requests>=2.31,<3",
  "openrouter>=0.6.0,<1"
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10"
]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "requests>=2.31,<3",
  "responses>=0.25,<1",
  "respx>=0.21,<1"
]

[project.urls]
Homepage = "https://hexi.readthedocs.io"
Documentation = "https://hexi.readthedocs.io"
Source = "https://github.com/antonioognio/hexi"
Issues = "https://github.com/antonioognio/hexi/issues"

[project.scripts]
hexi = "hexi.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
