[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-fastapi-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1"]
