[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-typer-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
samplecli = "samplecli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
